--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "googleapis": "^92.0.0",
     "mongodb": "^4.1.3",
     "nodemon": "^2.0.13",
     "phin": "^3.6.0",
